# test_pinocchio

./: CMakeLists.txt  README.md  package.xml
cmake/: config.h.cmake
cmake/Modules/: FindTinyXML.cmake
include/: Configuration.h
models/Valkyrie/: CMakeLists.txt  core  lighter_r5_urdf_rbdl.urdf  r5_urdf_rbdl.urdf  r5_urdf_right_leg.urdf  valkyrie_simple.urdf
src/: test_urdf.cpp  test_valkyrie_model.cpp
